2013-09-17  bulgarelli  <bulgarelli@abmac.local>

	* code/CTAPacket.cpp (RTATelem::CTAPacket::CTAPacket): RTATelem::CTAPacket::CTAPacket(string packetConfig)
	* code/CTAPacket.h (CTAPacket): dword getInputPacketDimension(byte* stream);

2013-09-10  Andrea Bulgarelli  <bulgarelli@iasfbo.inaf.it>
tag v1.0.0
Dependency: PacketLib v2.0.6

	* code/CTAPacket.h (CTAPacket): ByteStream* getInputPacketData();
	* removed virtual from all the method (for python binding)


